--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
  * Theme Name: Harmoni
- * Description: Feature packed starter theme.
+ * Description: Feature packed starter theme for developers.
  * Author: Dennis Josek
  * Text Domain: harmoni
  * Version: 0.1
