Add new Twig functions and change author name

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
  * Theme Name: Harmoni
  * Description: Feature packed starter theme for developers.
- * Author: Dennis Josek
+ * Author: Fabrikat
  * Text Domain: harmoni
  * Version: 0.01
 */
